tests/baselines/reference/initializedDestructuringAssignmentTypes.errors.txt
initializedDestructuringAssignmentTypes.ts(1,29): error TS2345: Argument of type 'string' is not assignable to parameter of type 'RegExp'.
initializedDestructuringAssignmentTypes.ts(3,3): error TS2339: Property 'toFixed' does not exist on type 'string'.


==== initializedDestructuringAssignmentTypes.ts (2 errors) ====
    const [, a = ''] = ''.match('') || [];
                                ~~
!!! error TS2345: Argument of type 'string' is not assignable to parameter of type 'RegExp'.
    
    a.toFixed()
      ~~~~~~~
!!! error TS2339: Property 'toFixed' does not exist on type 'string'.